tests/ui/fail_invalid_level.rs
use hemera::hemera;

// Invalid level value
#[hemera(level = "warn")]
fn invalid_level() {}

fn main() {}
